# World-Robot-Summit-2020

./: README.md
src/customer_stop_by_joy/: CMakeLists.txt  package.xml
src/customer_stop_by_joy/include/customer_stop_by_joy/: customer_stop_by_joy.h
src/customer_stop_by_joy/launch/: customer_stop_by_joy.launch
src/customer_stop_by_joy/src/: customer_stop_by_joy.cpp  customer_stop_by_joy_node.cpp
src/getback_to_waypoint/: CMakeLists.txt  package.xml
src/getback_to_waypoint/include/getback_to_waypoint/: .getback_to_waypoint.h.swp  getback_to_waypoint.h
src/getback_to_waypoint/launch/: getback_to_waypoint.launch
src/getback_to_waypoint/src/: .getback_to_waypoint.cpp.swp  getback_to_waypoint.cpp  getback_to_waypoint_node.cpp
src/go_to_object/: CMakeLists.txt  package.xml
src/go_to_object/launch/: go_to_object.launch
src/go_to_object/script/: go_to_object.py
src/pure_pursuit/: CMakeLists.txt  package.xml
src/pure_pursuit/include/pure_pursuit/: pure_pursuit.h
src/pure_pursuit/src/: pure_pursuit.cpp
src/pure_pursuit_wrs/: CMakeLists.txt  package.xml
src/pure_pursuit_wrs/include/pure_pursuit_wrs/: pure_pursuit_wrs.h
src/pure_pursuit_wrs/launch/: pure_pursuit_wrs.launch
src/pure_pursuit_wrs/src/: pure_pursuit_wrs.cpp  pure_pursuit_wrs_node.cpp
src/search_object_arround/: CMakeLists.txt  package.xml
src/search_object_arround/include/search_object_arround/: search_object_arroud.h
src/search_object_arround/src/: search_object_arround.cpp
src/waypoint_loader/launch/: waypoint_loader.launch
src/waypoint_loader_wrs/: CMakeLists.txt  package.xml
src/waypoint_loader_wrs/include/waypoint_loader_wrs/: waypoint_loader_wrs.h
src/waypoint_loader_wrs/launch/: waypoint_loader_wrs.launch
src/waypoint_loader_wrs/src/: waypoint_loader_wrs.cpp  waypoint_loader_wrs_node.cpp
src/waypoint_saver_wrs/: CMakeLists.txt  package.xml
src/waypoint_saver_wrs/include/waypoint_saver_wrs/: waypoint_saver_wrs.h
src/waypoint_saver_wrs/launch/: waypoint_saver_wrs.launch
src/waypoint_saver_wrs/src/: waypoint_saver_wrs.cpp  waypoint_saver_wrs_node.cpp
