<?xml version="1.0"?>
<package format="2">
  <name>waypoint_saver_wrs</name>
  <version>0.0.0</version>
  <description>The waypoint_saver_wrs package</description>

  <maintainer email="ranka@todo.todo">ranka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>geomrty_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
